<resources>
    <string name="app_name">Orações &amp; Promessas</string>
    <string name="saudacoes">Esse Aplicativo foi desenvolvido sem nenhuma intenção de lucro por isso não terá anúncios e também foi desenvolvido como parte de pagamento de uma promessa feita por eu desenvolvedor, aproveitem e espero que possa te ajudar assim como me ajudou!</string>
    <string name="todo">TODO</string>
    <string name="pedido_a_santa_rita_de_cassia">Pedido a Santa Rita de Cássia</string>
    <string name="oracao_do_pai_nosso">Oração do Pai Nosso</string>
    <string name="Oracao_do_pedido">Ó poderosa e gloriosa Santa Rita chamada Santa das causas impossíveis, advogada dos casos desesperados, auxiliadora da última hora, refúgio e abrigo da dor que arrasta para o abismo do pecado e da desesperança, com toda a confiança em Vosso poder junto ao Coração Sagrado de Jesus, a Vós recorro no caso difícil e imprevisto, que dolorosamente oprime o meu coração. (Faça seu pedido). Obtenha a graça que desejo, pois sendo-me necessária, eu a quero. Apresentada por Vós a minha oração, o meu pedido, por Vós que sois tão amada por Deus, certamente será atendido. Dizei a Nosso Senhor que me valerei da graça para melhorar a minha vida e os meus costumes e para cantar na Terra e no Céu a Divina Misericórdia. Santa Rita das causas impossíveis, intercedei por nós! Amém.</string>
    <string name="Oracao_do_Pai_Nosso_text">Pai-Nosso que estais nos céus, Santificado seja vosso nome, Venha a nós o vosso reino, Seja feita a vossa vontade assim na terra como no céu. O pão nosso de cada dia nos dai hoje, Perdoai-nos as nossas ofensas assim como nós perdoamos a quem nos tem ofendido, e não nos deixeis cair em tentação, Mas livrai-nos do mal. Amém.</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="share_app">Estou compartilhando com você essa oração:</string>
</resources>