<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saudacoes"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20sp"/>

    <ImageView
        android:id="@+id/santa_rita"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/santa_rita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="70sp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_santa_rita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/pedido_a_santa_rita_de_cassia"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/santa_rita"
        app:cornerRadius="15dp"
        tools:targetApi="lollipop"/>

    <ImageView
        android:id="@+id/pai_nosso"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:src="@drawable/pai_nosso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_santa_rita"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pai_nosso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/oracao_do_pai_nosso"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pai_nosso"
        app:cornerRadius="15dp"
        tools:targetApi="lollipop"/>

</androidx.constraintlayout.widget.ConstraintLayout>