<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Oracao_do_Pai_Nosso">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_under"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/oracao_pai_nosso_ph"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/pai_nosso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_oracao"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text_oracao"
        android:layout_width="370dp"
        android:layout_height="130dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/Oracao_do_Pai_Nosso_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintBottom_toBottomOf="@id/guide_under"/>

    <TextView
        android:id="@+id/compartilhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/compartilhe"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/text_oracao"
        android:paddingTop="18dp"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/share_oracao"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/compartilhe"
        app:layout_constraintTop_toTopOf="@id/compartilhe"/>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/navigate_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_navigate_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>